# PyAstroV

./: .gitattributes  .gitignore  .python-version  README.md  a.py  base64.txt  mqtt_camera_client.log.2023-10-01  mqtt_camera_client.log.2023-10-04  mqtt_camera_client.log.2023-10-05  pyproject.toml  run.sh  stack.py  stacked_M13_blue.fits
b/: Cargo.toml
b/src/: main.rs
cv/: package.json
cv/src-tauri/: Cargo.toml  tauri.conf.json
cv/src-tauri/src/: main.rs
pyastrov/: __init__.py  core.py
pyastrov/camera/: interface.py
pyastrov/camera/mqtt/: api.py  client.py  config.py
pyastrov/procimg/: async_stack.py  img_processor.py  mulproc_stack.py  stack.py  utils.py
pyastrov/ui/: app.py  ft_part.py
pyastrov/ui/control_panel/: base.py  img_ctrl.py  params.py  setting.py  stack.py  wb_rgb.py
pyastrov/ui/view_panel/: base.py  logo_base64.txt
samples/: main.py  main2.py  sample.py  sharedctypes.py  sharedmem copy.py  sharedmem.py
samples/camera_device/: mock.py  req.py  server.py  sub.py  svbony.py
src/astroviewer/: __init__.py  app.py  c.py  d.py  ft_part.py  proc_img.py
src/astroviewer/samples/: main.py  sample.py  sharedctypes.py  sharedmem copy.py  sharedmem.py
src/camera/: core.py  interface.py  logger.py  manager.py
src/camera/mqtt/: api.py  client.py  config.py
src/camera_device/: interface.py  manager.py  mock.py  req.py  server.py  svbony.py
src/camera_device/mqtt/: client.py  mqtt_config.py  run.py  server.py
src/mqtt/: core.py
src/mqtt/camera/: client.py  mqtt_config.py
src/pyastrov/: core.py  logger.py
src/ui/: app.py
(+13 files in other folders)
